kgateway/banking-app/demo/k8s/kgatwy/transaction.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transaction-route
  namespace: banking
spec:
  parentRefs:
    - name: banking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/transactions
      backendRefs:
        - name: transaction-service
          port: 3003
